Fix input wrap

--- a/web/style.css
+++ b/web/style.css
@@ -45,7 +45,7 @@ h3 {
 }
 
 .detail {
-  height: 20vh;
+  height: 10vh;
   width: 100%;
   display: flex;
   /* grid-template-rows: auto;
@@ -58,7 +58,7 @@ h3 {
   height: 10vh;
 }
 .input-box {
-  margin: 2% 4% 2% 4%;
+  margin: 0 4% 0 4%;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -75,6 +75,8 @@ input {
 
 .btn-container {
   display: flex;
+  /* padding-right: 7%; */
+  /* flex-direction: row-reverse; */
   justify-content: center;
 }
 button {
